dfir_rs/tests/compile-fail-stable/surface_use_unknown.rs
../compile-fail/surface_use_unknown.rs